<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainHelpActivity" 
    android:background="@drawable/bg_gradient">

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" 
	    android:background="@drawable/grp_box">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:text="@string/maintxt_enterTeamNum"
	        android:textColor="@color/text_main"
	        android:textSize="20sp"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:text="@string/maintxt_enterMatchNum"
	        android:textColor="@color/text_main"
	        android:textSize="20sp"/>
	     
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:text="@string/maintxt_enterColor"
	        android:textColor="@color/text_main"
	        android:textSize="20sp"/>
	      
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:text="@string/maintxt_begin"
	        android:textColor="@color/text_main"
	        android:textSize="20sp"/>
     
	 </LinearLayout>    
	     
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/helptxt_return"
        android:textColor="@color/text_main"
        android:textSize="20sp"
        android:padding="10dp" 
	    android:background="@drawable/grp_box"/>

</LinearLayout>
